softpage overflow fix

--- a/scss/modules/_softpage.scss
+++ b/scss/modules/_softpage.scss
@@ -16,7 +16,8 @@ Global Softpage definitions
         bottom: 0;
         margin: 0;
         min-height: 0 !important; // this one is set on a project basis, so we gotta force it
-        overflow-y: scroll; /* has to be scroll, not auto */
+        overflow-y: scroll; // has to be scroll, not auto
+        overflow-x: hidden;
         -webkit-overflow-scrolling: touch;
     }
 
